delete old arg parser